Implement Favorites with 2 or 3 column grid layout

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,14 +3,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/list"
-        style="@style/ProfileListView"
-        android:isScrollContainer="false"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-    </ListView>
+        android:scrollbars="vertical"
+        android:clipToPadding="false" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
