--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -170,4 +170,7 @@
         <item name="android:textSize">@dimen/font_size_medium</item>
     </style>
 
+    <style name="ProfileSpinner">
+    </style>
+
 </resources>
